fix: CVE-2025-66478 and actions and map (#8)
* fix: path

* fix: key

* fix: docker

* refactor: move dashboard to root path

* fix: radar

* fix: radar

* fix: radar

* fix: weather

* refactor(weather-header): simplify logic

* fix: build crash

* feat: map

* feat: map

* fix: map

* fix: data

* fix: data

* feat: maxIntensity

* fix: panel

* fix: rts

* feat: colors

* fix: map

* feat: colors

* fix: fun name

* fix: name

* fix: page

* fix: map

* fix: map

* fix: map

* fix: color

* feat: getIntensityText

* feat: getIntensityText

* feat: type

* fix: cpu occupy

* feat: onCleanup

* fix: task

* fix: style

* fix: page

* fix: color

* fix: map

* fix: username

* fix: username

* fix: path

* feat: tailwind v4 and web background color

* feat: loading page

* feat: map

* chore(deps): bump next to 15.5.7 for CVE-2025-66478

* chore: bump bun to 1.3.4

* fix: compose

* feat: suspense

* feat: port

* fix: port and path

* fix: path

---------

Co-authored-by: YuYu1015 <whes1015@gmail.com>
Co-authored-by: Kamiya <kamiya@kamiya.app>
Co-authored-by: YuYu1015 <44525760+whes1015@users.noreply.github.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,10 @@ jobs:
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.HOST }}
-        username: yuyu1015
+        username: exptech
+        port: ${{ secrets.SSH_PORT }}
         password: ${{ secrets.PASSWORD }}
         script: |
-          cd /home/yuyu1015/weather-dashboard
+          cd /home/exptech/weather-dashboard-dev
           git pull
           docker compose up -d --build weather-dashboard-dev
