--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "lucide-react": "^0.475.0",
     "maplibre-gl": "^5.1.0",
     "moment": "^2.30.1",
-    "next": "15.1.7",
+    "next": "15.5.7",
     "next-themes": "^0.4.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -33,11 +33,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "15.5.6",
     "eslint-plugin-import-x": "^4.6.1",
-    "eslint-plugin-readable-tailwind": "^1.9.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "eslint-plugin-readable-tailwind": "^3.0.0",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "typescript": "^5",
     "typescript-eslint": "^8.24.0"
   }
